---
source: tests/integration.rs
assertion_line: 349
expression: stderr
---
<fixture>:4:1: error[E_REF_INVALID]: malformed ref syntax: `ref over A, B`
ref over A, B
^^^^^^^^^^^^^
